# KmShUZA

./: .gitignore  README.md  config.py  conftest.py  kmsh_uza_receiver.service  logger.py  main.py  pyproject.toml  pytest.ini
bot/: app.py  config.py  getters.py  middlewares.py  pyproject.toml  service.py
bot/common_domain/: entities.py
bot/common_infra/presenter/: __init__.py  service.py
bot/common_infra/repo/: mapping.py
bot/common_infra/repo/sqlite/: pumprepo.py  table.sql  user_repo.py
bot/domain/: entities.py  ports.py  use_cases.py
bot/infra/: cache_service.py
bot/infra/presenter/: service.py  tools.py
bot/infra/repo/postgres/: base_repo.py  pg_table.sql  pool.py  pump_repo.py
bot/infra/ui/: dialogs.py  getters.py  handlers.py
core/: models.py  ports.py  use_cases.py
domain/: __init__.py  entities.py  models.py  ports.py  use_cases.py
flask_app/: app.py
flask_app/common_domain/: exceptions.py  ports.py
infra/bot/: __init__.py  dialogs.py  getters.py  handlers.py  middlewares.py  service.py  states.py
infra/bot/presenter/: __init__.py  service.py
infra/flask_app/auth/: views.py
infra/flask_app/pr_info/: views.py
infra/flask_ui/: main.py
infra/img_service/: service.py
infra/presenter/: service.py  tools.py
infra/scheduler/: jobs.py
logs/: poller.err
modbus/: .~lock.103uza.2.11.368.0_Сетевые, Slave.csv#  103uza.2.11.368.0_Сетевые, Slave.csv
poll_app/: app.py  config.py  logger.py  pyproject.toml
poll_app/common_infra/repo/postgres/: user_repo.py
poll_app/domain/: entities.py  ports.py  use_cases.py
poll_app/infra/receiver/modbus/: mapping.py  receiver.py
poll_app/infra/repo/: mapping.py
poll_app/infra/repo/postgres/: base_repo.py  pg_table.sql  pool.py  pump_repo.py
poll_app/infra/repo/sqlite/: pumprepo.py
receiver/: app.py  config.py
receiver/domain/: entities.py  ports.py  use_cases.py
(+22 files in other folders)
