[project]
name = "kmshuza"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "aiogram-dialog>=2.4.0",
    "aiosqlite>=0.21.0",
    "coverage>=7.12.0",
    "pydantic-settings>=2.12.0",
    "pymodbus>=3.11.3",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
