[project]
name = "kmshuza"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "aiogram-dialog>=2.4.0",
    "aiosqlite>=0.21.0",
    "apscheduler>=3.11.1",
    "babel>=2.17.0",
    "coverage>=7.12.0",
    "flask>=3.1.2",
    "graphviz>=0.21",
    "matplotlib>=3.10.7",
    "pillow>=12.0.0",
    "pydantic-settings>=2.12.0",
    "pydeps>=3.0.1",
    "pymodbus>=3.11.3",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "redis>=7.1.0",
]
