[project]
name = "poll-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg[binary,pool]>=3.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymodbus>=3.11.4",
    "pytest>=9.0.2",
    "redis>=7.1.0",
]
